--- a/webapp/styles.css
+++ b/webapp/styles.css
@@ -2,6 +2,16 @@
 
 html, body { height: 100%; margin: 0; padding: 0; font-family: "Lato", "Helvetica", "Arial", "sans-serif"}
 
+header, main, footer {
+    padding-left: 240px;
+}
+
+@media only screen and (max-width : 992px) {
+    header, main, footer {
+        padding-left: 0;
+    }
+}
+
 #map
 {
     width: 600px;
@@ -11,6 +21,8 @@ html, body { height: 100%; margin: 0; padding: 0; font-family: "Lato", "Helvetic
 
 #logo {
     text-align: center;
+    font-family: "Lato", "Open Sans", "Helvetica", "Arial", "sans-serif";
+    font-size: 4vw;
 }
 
 .row {
