--- a/webapp/styles.css
+++ b/webapp/styles.css
@@ -14,7 +14,7 @@ header, main, footer {
 
 #map
 {
-    width: 600px;
+    width: 100%;
     height: 450px;
     margin: 0 auto;
 }
@@ -38,4 +38,9 @@ header, main, footer {
     background-color: rgba(0, 0, 0, 0.05);
 }
 
+.navbar-inverse .navbar-brand:hover,
+.navbar-inverse .navbar-brand:focus {
+    background-color: transparent;
+    color: #999999;
+}
 
