--- a/webapp/styles.css
+++ b/webapp/styles.css
@@ -13,8 +13,16 @@ header, main, footer {
 }
 
 #chart {
-    height: 5%;
+    height: 20%;
     width: 100%;
+}
+
+#chart1 {
+    height: auto;
+}
+
+#main {
+    height: auto;
 }
 
 #map
