--- a/webapp/chartStyle.css
+++ b/webapp/chartStyle.css
@@ -1,3 +1,9 @@
 .ct-chart .ct-grid {
-    stroke-dasharray: none;
+    /*stroke-dasharray: none;*/
 }
+
+.ct-chart .ct-bar {
+    /* Colour of your bars */
+    stroke: #b2dfdb !important;
+    /* The width of your bars */
+    stroke-width: 17px;
