Ändrade färg och bredd på barsen i charten

--- a/webapp/chartStyle.css
+++ b/webapp/chartStyle.css
@@ -4,6 +4,6 @@
 
 .ct-chart .ct-bar {
     /* Colour of your bars */
-    stroke: #b2dfdb !important;
+    stroke: #7CB8C8 !important;
     /* The width of your bars */
     stroke-width: 17px;
