--- a/webapp/styles.css
+++ b/webapp/styles.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,900,700);
 
 html, body { height: 100%; margin: 0; padding: 0; font-family: "Lato", "Helvetica", "Arial", "sans-serif"}
 
@@ -12,14 +12,14 @@ header, main, footer {
     }
 }
 
-#chart {
-    height: 20%;
-    width: 100%;
-}
+/*#chart {*/
+    /*height: 20%;*/
+    /*width: 100%;*/
+/*}*/
 
-#chart1 {
-    height: auto;
-}
+/*#chart1 {*/
+    /*height: auto;*/
+/*}*/
 
 #main {
     height: auto;
@@ -43,6 +43,24 @@ header, main, footer {
     height: 100%;
 }
 
+.side-nav a {
+    font-size: 14px;
+    padding: 0;
+}
+
+.side-nav.fixed .top-li .bold {
+    font-weight: 700;
+}
+
+.side-nav .stations li{
+    height: 48px;
+    /*line-height: 1;*/
+}
+
+.side-nav .stations li a{
+
+}
+
 .top-li:hover {
      background-color: #fff;
 }
@@ -57,3 +75,25 @@ header, main, footer {
     color: #999999;
 }
 
+.side-nav li:hover, .side-nav li.active {
+    background-color: inherit; }
+
+.collapsible-body li:hover {
+    background-color: #7CB8C8!important;
+
+}
+#map{
+    height: 75vh;
+}
+
+
+#chart-holder{
+    height: 25vh;
+    width: 100%;
+    position: fixed;
+    bottom: 0px;
+}
+
+#chart1{
+    height: 25vh;
+}
